--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
+    "shadcn": "^2.4.0-canary.12",
+    "tailwindcss": "^4.0.12",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
